--- a/e-commerce-app/.gitignore
+++ b/e-commerce-app/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# for firebase
+/firebase/functions/node_modules
+
 # compiled output
 /dist
 /tmp
